--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 </head>
 
 <body>
-    <div class="flex items-start p-5 justify-center gap-5 mx-auto mt-5">
-        <div class="max-w-[15%] w-full">
+
+    <div class="flex items-center justify-between p-5 mt-2">
+        <img src="/Docs/assets/Techcrunch-Images/logo.png" class="h-8" alt="">
+        <i class="fa-solid fa-bars text-[#36C275] text-2xl"></i>
+    </div>
+    
+    <div class="flex items-start p-5 justify-center gap-5 mx-auto mt-5">        
+        <div class="max-w-[15%] w-full hidden md:block">
             <img src="/Docs/assets/Techcrunch-Images/logo.png" class="h-8" alt="">
             <ul class="text-[#717171] mt-3 flex flex-col gap-3">
                 <li class="pb-5"><a class="hover:underline hover:text-zinc-700 transition-all" href="#">Login</a></li>
@@ -30,7 +36,7 @@
                 <li><a href="#" class="hover:underline hover:text-zinc-700 transition-all">More</a></li>
             </ul>
         </div>
-        <div class="max-w-[60%] w-full flex items-start gap-5">
+        <div class="md:max-w-[60%] w-full flex items-start gap-5">
             <div class="">
                 <p class="text-[#00D301]">Apps</p>
                 <h1 class="text-4xl font-black py-3">Chup Online: The World’s First Breakthrough Ending Patient
@@ -131,14 +137,14 @@
                     “Chup” means “to book it”, and with Chup Online, once you “Chup it,” there’s no need to wait.</p>
                 <p class="text-[#333333] my-7">For more info : Please visit <i><u>www.chup.online</u></i></p>
                 <div class="border border-black px-5 py-8">
-                    <div class="flex items-center justify-between">
+                    <div class="flex md:flex-row flex-col md:items-center gap-3 justify-between">
                         <h2 class="font-black text-lg">Get the industry’s biggest tech news</h2>
                         <u class="font-semibold ">Explore all newsletters&nbsp; <i
                                 class="fa-solid fa-arrow-up rotate-45 "></i></u>
                     </div>
                     <div class="mt-5 grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-4">
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
-                            <div class="flex items-start  justify-between">
+                            <div class="flex items-start  justify-between gap-2">
                                 <h2 class="font-extrabold">TechCrunch Daily News</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
@@ -147,7 +153,7 @@
                                 TechCrunch’s coverage.</p>
                         </div>
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
-                            <div class="flex items-start  justify-between">
+                            <div class="flex items-start  justify-between gap-2">
                                 <h2 class="font-extrabold">Startups Weekly</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
@@ -156,7 +162,7 @@
                                 coverage delivered weekly.</p>
                         </div>
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
-                            <div class="flex items-start  justify-between">
+                            <div class="flex items-start  justify-between gap-2">
                                 <h2 class="font-extrabold">TechCrunch Week in Review</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
@@ -165,7 +171,7 @@
                                 every Saturday.</p>
                         </div>
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
-                            <div class="flex items-start  justify-between">
+                            <div class="flex items-start  justify-between gap-2">
                                 <h2 class="font-extrabold">TechCrunch AI</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
@@ -174,12 +180,12 @@
                                 experts cover the latest news in the fast-moving field.</p>
                         </div>
                     </div>
-                    <p class="font-semibold text-black mt-8 mb-5">Email address (required)</p>
-                    <div class="flex items-center w-full mb-4">
-                        <input type="text" class="w-full p-3 py-3.5 border-2 border-[#999999] border-r-0 rounded-sm"
+                    <p class="font-semibold text-black mt-8 md:mb-5 mb-3">Email address (required)</p>
+                    <div class="flex items-center md:flex-row flex-col w-full mb-4 gap-3 md:gap-0">
+                        <input type="text" class="w-full p-3 py-3.5 border-2 border-[#999999] md:border-r-0 rounded-sm"
                             placeholder="Email address">
                         <button
-                            class="py-3.5 px-12 bg-[#DDDDDD] border-2 border-[#999999] text-[#717171] font-semibold tracking-wide">Subscribe</button>
+                            class="py-3.5 px-12 bg-[#DDDDDD] border-2 border-[#999999] text-[#717171] w-full md:w-auto font-semibold tracking-wide">Subscribe</button>
                     </div>
                     <i class="text-[#333333]">By submitting your email, you agree to our  <span
                             class="text-[#00A562]">Terms</span> and <span class="text-[#00A562]">Privacy
@@ -190,7 +196,7 @@
                 <p class="text-[#00A562]">Apps, bumble, dating apps</p>
 
                 <div class="mt-10">
-                    <div class="grid grid-cols-3 gap-7">
+                    <div class="grid md:grid-cols-3 grid-cols-2 gap-7">
                         <div class="flex flex-col gap-1">
                             <p class="text-[#00A562]">AI</p>
                             <h2 class="text-lg leading-tight font-extrabold">Amazon starts testing ads in its Rufus
@@ -198,13 +204,13 @@
                             <p class="font-semibold text-xs pt-3">Kyle Wiggers</p>
                             <p class="text-xs text-[#717171]">4 hours ago</p>
                         </div>
-                        <p class="text-[#717171]">Rufus, Amazon’s recently launched, shopping-focused chatbot, is
+                        <p class="text-[#717171] md:block hidden">Rufus, Amazon’s recently launched, shopping-focused chatbot, is
                             getting ads soon. That’s according to a changelog published by Amazon this week (first
                             spotted by AdWeek), which states that sponsored ads could…</p>
                         <img src="/Docs/assets/Techcrunch-Images/tag1.png" class="w-full rounded-sm" alt="">
                     </div>
                     <div class="w-full h-0.5 bg-[#DDDDDD] my-10"></div>
-                    <div class="grid grid-cols-3 gap-7">
+                    <div class="grid md:grid-cols-3 grid-cols-2 gap-7">
                         <div class="flex flex-col gap-1">
                             <p class="text-[#00A562]">Social</p>
                             <h2 class="text-lg leading-tight font-extrabold">Bluesky catches up to X with native support
@@ -212,7 +218,7 @@
                             <p class="font-semibold text-xs pt-3">Sarah Perez</p>
                             <p class="text-xs text-[#717171]">4 hours ago</p>
                         </div>
-                        <p class="text-[#717171]">With native video support,
+                        <p class="text-[#717171] md:block hidden">With native video support,
                             Bluesky will be able to better
                             compete with other X rivals,
                             including Instagram Threads and the decentralized service
@@ -220,7 +226,7 @@
                         <img src="/Docs/assets/Techcrunch-Images/tag1.png" class="w-full rounded-sm" alt="">
                     </div>
                     <div class="w-full h-0.5 bg-[#DDDDDD] my-10"></div>
-                    <div class="grid grid-cols-3 gap-7">
+                    <div class="grid md:grid-cols-3 grid-cols-2 gap-7">
                         <div class="flex flex-col gap-1">
                             <p class="text-[#00A562]">Media & Entertainment</p>
                             <h2 class="text-lg leading-tight font-extrabold">Google’s AI note-
@@ -231,7 +237,7 @@
                             <p class="font-semibold text-xs pt-3">Aisha Malik</p>
                             <p class="text-xs text-[#717171]">4 hours ago</p>
                         </div>
-                        <p class="text-[#717171]">Google announced on
+                        <p class="text-[#717171] md:block hidden">Google announced on
                             Wednesday that its AI note-taking and research app, NotebookLM, is adding an “Audio
                             Overview” feature. Audio Overview will give
                             users another way to digest and comprehend the…</p>
@@ -240,7 +246,7 @@
                 </div>
 
             </div>
-            <div class="flex flex-col text-white ">
+            <div class="md:flex flex-col text-white  hidden ">
                 <div class="w-10 h-10 mb-[1px] flex items-center rounded-sm justify-center bg-[#00A562]">
                     <i class="fa-brands fa-x-twitter"></i>
                 </div>
@@ -262,14 +268,96 @@
 
             </div>
         </div>
-        <div class="max-w-[15%] w-full relative">
+        <div class="max-w-[15%] w-full relative  hidden md:block">
             <img src="./Docs/assets/Techcrunch-Images/ads.png" class="w-full rounded-sm" alt="">
             <div class="flex items-center gap-1  absolute top-1 right-1">
                 <i class="fa-solid fa-triangle-exclamation p-0.5 py-[1px] bg-white text-xs text-[#00AECD]"></i>
-                <i class="fa-solid fa-xmark p-0.5 py-[1px] bg-white text-[#00AECD] "></i>
+                <i class="fa-solid fa-xmark p-0.5 py-[1px] bg-white text-[#00AECD]"></i>
             </div>
         </div>
     </div>
+
+    <footer class="border-t border-zinc-300 mt-16">
+        <div class="flex my-8 px-5 flex-wrap md:flex-row gap-8 flex-col justify-between max-w-6xl mx-auto">
+            <div class="">
+                <h2 class="font-semibold pb-4">About</h2>
+                <ul class="flex flex-col gap-2">
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">TechCrunch</a>
+                    </li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Staff</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Contact Us</a>
+                    </li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Advertise</a>
+                    </li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Crunchboard
+                            Jobs</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Site Map</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="">
+                <h2 class="font-semibold pb-4">Legal</h2>
+                <ul class="flex flex-col gap-2">
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Terms of
+                            Service</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Privacy
+                            Policy</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">RSS Terms of
+                            Use</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Your Privacy
+                            Choices</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">CA Privacy
+                            Notice</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Code of
+                            Conduct</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">About Our
+                            Ads</a></li>
+                </ul>
+            </div>
+            <div class="">
+                <h2 class="font-semibold pb-4">Trending Tech Topics</h2>
+                <ul class="flex flex-col gap-2">
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Apple iPhone 16
+                            Event</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">iPhone 16</a>
+                    </li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">AirPods 4</a>
+                    </li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Siri</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">WhatsApp</a>
+                    </li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">Tech
+                            Layoffs</a></li>
+                    <li><a href="#" class="text-[#717171] hover:text-[#343434] transition-all underline">ChatGPT</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex gap-16">
+                <div class="flex flex-col gap-2">
+                    <a href="#" class="flex items-center gap-3 text-sm"><i class="fa-brands fa-facebook text-2xl"></i>
+                        Facebook</a>
+                    <a href="#" class="flex items-center gap-3 text-sm"><i class="fa-brands fa-youtube text-2xl"></i>
+                        YouTube</a>
+                    <a href="#" class="flex items-center gap-3 text-sm"><i class="fa-brands fa-linkedin text-2xl"></i>
+                        Linkedin</a>
+                    <a href="#" class="flex items-center gap-3 text-sm"><i class="fa-brands fa-threads text-2xl"></i>
+                        Threads</a>
+                </div>
+                <div class="flex flex-col gap-2">
+                    <a href="#" class="flex items-center gap-3 text-sm"><i class="fa-brands fa-x-twitter text-2xl"></i>
+                        X</a>
+                    <a href="#" class="flex items-center gap-3 text-sm"><i class="fa-brands fa-instagram text-2xl"></i>
+                        Instagram</a>
+                    <a href="#" class="flex items-center gap-3 text-sm"><i class="fa-brands fa-mastodon text-2xl"></i>
+                        Mastodon</a>
+                </div>
+            </div>
+        </div>
+        <div class="mb-8 mt-12 flex px-5 items-center md:gap-1 gap-5 justify-center">
+            <p class="text-zinc-500 md:text-center">© 2024 Yahoo. All rights reserved.</p>
+            <p class="text-zinc-500 md:text-center">Powered by <span class="underline">WordPress VIP</span></p>
+        </div>
+    </footer>
 </body>
 
 </html>
