--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
         <div class="md:max-w-[60%] w-full flex items-start gap-5">
             <div class="">
                 <p class="text-[#00D301]">Apps</p>
-                <h1 class="text-4xl font-black py-3">Chup Online: The World’s First Breakthrough Ending Patient
+                <h1 class="md:text-4xl text-3xl font-black py-3">Chup Online: The World’s First Breakthrough Ending Patient
                     Frustration in Healthcare</h1>
                 <div class="mt-10 flex items-center justify-between mb-9">
-                    <p class="text-[#717171] "><span class="text-black font-semibold">Lauren Forristal
-                        </span>&nbsp;&nbsp;/&nbsp;&nbsp; 2:00 PM PDT • September 10, 2024</p>
+                    <div class="flex md:flex-row flex-col md:items-center gap-3">
+                        <p class="text-black font-semibold">Lauren Forristal</p>
+                        <p class="text-[#717171]">2:00 PM PDT • September 10, 2024</p>
+                    </div>
                     <p class="text-[#717171] text-sm"><i class="fa-regular fa-message text-[#00A562] "></i>&nbsp;
                         Comment</p>
                 </div>
