--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="text-black font-semibold">Lauren Forristal</p>
                         <p class="text-[#717171]">2:00 PM PDT • September 10, 2024</p>
                     </div>
-                    <p class="text-[#717171] text-sm"><i class="fa-regular fa-message text-[#00A562] "></i>&nbsp;
+                    <p class="text-[#717171] text-sm flex items-center"><i class="fa-regular fa-message text-[#00A562] "></i>&nbsp;
                         Comment</p>
                 </div>
                 <img src="/Docs/assets/Techcrunch-Images/Smartmockups1.png" class="w-full" alt="">
