--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="flex items-center justify-between p-5 mt-2">
+    <div class="flex md:hidden items-center justify-between p-5 mt-2">
         <img src="/Docs/assets/Techcrunch-Images/logo.png" class="h-8" alt="">
         <i class="fa-solid fa-bars text-[#36C275] text-2xl"></i>
     </div>
