--- a/bg-online.html
+++ b/bg-online.html
@@ -11,6 +11,7 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
     <div class="flex items-center justify-between  px-5 md:px-10 mx-auto mt-3">
@@ -47,7 +48,8 @@
     <div class="flex items-center bg-[#3d3d3d] justify-between py-2 mt-5 px-5 md:px-10 mx-auto">
         <ul class="flex items-center gap-4 text-white ">
             <li><a href="#" class="uppercase hover:text-[#D31145] transition-all font-medium">Berita</a></li>
-            <li><a href="#" class="uppercase hover:text-[#D31145] transition-all font-medium text-[#D31145]">Sukan</a></li>
+            <li><a href="#" class="uppercase hover:text-[#D31145] transition-all font-medium text-[#D31145]">Sukan</a>
+            </li>
             <li><a href="#" class="uppercase hover:text-[#D31145] transition-all font-medium">Hiburan</a></li>
             <li><a href="#" class="uppercase hover:text-[#D31145] transition-all font-medium">Bisnes</a></li>
             <li><a href="#" class="uppercase hover:text-[#D31145] transition-all font-medium">Rencana</a></li>
@@ -55,7 +57,9 @@
             <li><a href="#" class="uppercase hover:text-[#D31145] transition-all font-medium">Sihat</a></li>
         </ul>
         <div class="flex items-center gap-4">
-            <input type="text" class="p-2 border-2 border-zinc-500 bg-transparent rounded-md placeholder:text-zinc-500 text-white" placeholder="Cari kata kunci">
+            <input type="text"
+                class="p-2 border-2 border-zinc-500 bg-transparent rounded-md placeholder:text-zinc-500 text-white"
+                placeholder="Cari kata kunci">
             <i class="fa-solid fa-magnifying-glass text-xl text-white"></i>
         </div>
     </div>
@@ -68,6 +72,58 @@
             <li><a href="#" class="uppercase transition-all font-medium navUnderLine">Lain-lain (Sukan)</a></li>
         </ul>
     </div>
-    
+
+    <div class="max-w-7xl w-full mx-auto flex gap-6 mt-10 ">
+        <div class="max-w-[70%] w-full">
+            <h1 class="font-bold text-4xl">Menteri Kesihatan Dato' Seri Dr Dzulkefly Lawat KK Sungai Besi: Solusi Baharu
+                Kurangkan Masa Menunggu di Klinik Kesihatan?</h1>
+            <div class="mt-6 flex items-center justify-between">
+                <div class="">
+                    <p class="text-sm  text-[#212529]"><span class="text-[#D31145]">Khairil S Iswan </span> - September
+                        12, 2024 @ 12:28am</p>
+                    <p class="text-[#D31145] text-sm">bhsukan@bh.com.my</p>
+                </div>
+                <div class="flex items-center gap-2">
+                    <div
+                        class="w-10 h-10 bg-[#314a7e] text-white transition-all hover:opacity-85 cursor-pointer rounded-md flex items-center justify-center">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+                    <div
+                        class="w-10 h-10 bg-[#000000] text-white transition-all hover:opacity-85 cursor-pointer rounded-md flex items-center justify-center">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </div>
+                    <div
+                        class="w-10 h-10 bg-[#25D366] text-white transition-all hover:opacity-85 cursor-pointer rounded-md flex items-center justify-center">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </div>
+                </div>
+            </div>
+
+            <img src="/Docs/assets/bh-online/img1.png" class="w-full rounded-sm mt-9" alt="">
+            <p class="p-5 text-[#212529] bg-[#f4f4f4] text-center">Menteri Kesihatan, Dato' Seri Dr Dzulkefly Ahmad,
+                melawat KK Sungai Besi untuk melihat langsung uji coba sistem Automasi Temujanji dan Pengurusan Dinamik
+                Chup Online.</p>
+
+            <p class="text-[#212529] mt-8">Masalah masa menunggu yang panjang di klinik kesihatan awam sering menjadi keluhan masyarakat, tular di
+                media sosial, dan menjadi isu yang membelenggu sistem kesihatan negara. Di tengah-tengah perbincangan
+                ini, satu teknologi baharu yang dikenali sebagai Chup Online sedang diuji di beberapa klinik kerajaan,
+                termasuk Klinik Kesihatan (KK) Sungai Besi.
+                <br><br>
+                Pada hari ini, 15 Oktober 2024, Menteri Kesihatan, Dato' Seri Dr Dzulkefly Ahmad, melawat KK Sungai Besi
+                untuk melihat sendiri bagaimana sistem Automasi Temujanji dan Pengurusan Dinamik ini membantu
+                mengurangkan masa menunggu pesakit. Kehadiran beliau turut disambut dengan harapan tinggi bahawa Chup
+                Online mungkin menjadi penyelesaian yang dinanti-nantikan oleh rakyat Malaysia.
+            </p>
+        </div>
+
+
+
+
+
+
+        <div class="max-w-[30%] w-full "></div>
+    </div>
+
 </body>
+
 </html>
