--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             class="px-6 text-2xl underline bg-zinc-500 py-3 text-zinc-100 rounded-md w-80 text-center tracking-wider font-semibold">Techcrunch</a>
         <a href="./theStar.html" target="_blank"
             class="px-6 text-2xl underline bg-zinc-500 py-3 text-zinc-100 rounded-md w-80 text-center tracking-wider font-semibold">The Star</a>
-        <a href="./theStar.html" target="_blank"
+        <a href="./bg-online.html" target="_blank"
             class="px-6 text-2xl underline bg-zinc-500 py-3 text-zinc-100 rounded-md w-80 text-center tracking-wider font-semibold">BH Online</a>
     </div>
 
