--- a/Techcrunch.html
+++ b/Techcrunch.html
@@ -228,7 +228,7 @@
                             compete with other X rivals,
                             including Instagram Threads and the decentralized service
                             Mastodon, among others.</p>
-                        <img src="/Docs/assets/Techcrunch-Images/tag1.png" class="w-full rounded-sm" alt="">
+                        <img src="/Docs/assets/Techcrunch-Images/Figure → Link → bluesky-003.webp.png" class="w-full rounded-sm" alt="">
                     </div>
                     <div class="w-full h-0.5 bg-[#DDDDDD] my-10"></div>
                     <div class="grid md:grid-cols-3 grid-cols-2 gap-7">
@@ -246,7 +246,7 @@
                             Wednesday that its AI note-taking and research app, NotebookLM, is adding an “Audio
                             Overview” feature. Audio Overview will give
                             users another way to digest and comprehend the…</p>
-                        <img src="/Docs/assets/Techcrunch-Images/tag1.png" class="w-full rounded-sm" alt="">
+                        <img src="/Docs/assets/Techcrunch-Images/google.png" class="w-full rounded-sm" alt="">
                     </div>
                 </div>
 
