--- a/Techcrunch.html
+++ b/Techcrunch.html
@@ -139,7 +139,8 @@
                     algorithm is designed to handle any situation. Whether booking a healthcare appointment, visiting a
                     restaurant, or going to the bank, Chup Online makes sure you don’t have to wait. In Malay slang,
                     “Chup” means “to book it”, and with Chup Online, once you “Chup it,” there’s no need to wait.</p>
-                <p class="text-[#333333] my-7">For more info : Please visit <i><u>www.chup.online</u></i></p>
+                <p class="text-[#333333] my-7">For more info : Please visit <a href="www.chup.online">
+                        <i><u>www.chup.online</u></i></a></p>
                 <div class="border border-black px-5 py-8">
                     <div class="flex md:flex-row flex-col md:items-center gap-3 justify-between">
                         <h2 class="font-black text-lg">Get the industry’s biggest tech news</h2>
@@ -228,7 +229,8 @@
                             compete with other X rivals,
                             including Instagram Threads and the decentralized service
                             Mastodon, among others.</p>
-                        <img src="/Docs/assets/Techcrunch-Images/Figure → Link → bluesky-003.webp.png" class="w-full rounded-sm" alt="">
+                        <img src="/Docs/assets/Techcrunch-Images/Figure → Link → bluesky-003.webp.png"
+                            class="w-full rounded-sm" alt="">
                     </div>
                     <div class="w-full h-0.5 bg-[#DDDDDD] my-10"></div>
                     <div class="grid md:grid-cols-3 grid-cols-2 gap-7">
