--- a/Techcrunch.html
+++ b/Techcrunch.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
 </head>
 
 <body>
@@ -139,7 +140,8 @@
                     algorithm is designed to handle any situation. Whether booking a healthcare appointment, visiting a
                     restaurant, or going to the bank, Chup Online makes sure you don’t have to wait. In Malay slang,
                     “Chup” means “to book it”, and with Chup Online, once you “Chup it,” there’s no need to wait.</p>
-                <p class="text-[#333333] my-7">For more info : Please visit <a href="https://chup.online/" target="_blank">
+                <p class="text-[#333333] my-7">For more info : Please visit <a href="https://chup.online/"
+                        target="_blank">
                         <i><u>www.chup.online</u></i></a></p>
                 <div class="border border-black px-5 py-8">
                     <div class="flex md:flex-row flex-col md:items-center gap-3 justify-between">
@@ -366,5 +368,21 @@
         </div>
     </footer>
 </body>
+
+<script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+<script>
+    const lenis = new Lenis()
+
+    lenis.on('scroll', (e) => {
+        console.log(e)
+    })
+
+    function raf(time) {
+        lenis.raf(time)
+        requestAnimationFrame(raf)
+    }
+
+    requestAnimationFrame(raf)
+</script>
 
 </html>
