--- a/Techcrunch.html
+++ b/Techcrunch.html
@@ -152,7 +152,7 @@
                     <div class="mt-5 grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-4">
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
                             <div class="flex items-start  justify-between gap-2">
-                                <h2 class="font-extrabold">TechCrunch Daily News</h2>
+                                <h2 class="font-extrabold text-sm">TechCrunch Daily News</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
                             </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
                             <div class="flex items-start  justify-between gap-2">
-                                <h2 class="font-extrabold">Startups Weekly</h2>
+                                <h2 class="font-extrabold text-sm">Startups Weekly</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
                             </div>
@@ -170,7 +170,7 @@
                         </div>
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
                             <div class="flex items-start  justify-between gap-2">
-                                <h2 class="font-extrabold">TechCrunch Week in Review</h2>
+                                <h2 class="font-extrabold text-sm">TechCrunch Week in Review</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
                             </div>
@@ -179,7 +179,7 @@
                         </div>
                         <div class=" border-zinc-300 p-3 rounded-sm border-[1.5px]">
                             <div class="flex items-start  justify-between gap-2">
-                                <h2 class="font-extrabold">TechCrunch AI</h2>
+                                <h2 class="font-extrabold text-sm">TechCrunch AI</h2>
                                 <i
                                     class="fa-solid fa-plus cursor-pointer p-1 pt-[0.28rem] px-[0.33rem] flex items-center justify-center border-2 rounded-full text-[#00A562] border-[#00A562]"></i>
                             </div>
