--- a/bg-online.html
+++ b/bg-online.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
+
 </head>
 
 <body>
@@ -81,9 +83,9 @@
                 Kurangkan Masa Menunggu di Klinik Kesihatan?</h1>
             <div class="mt-6 flex lg:items-center gap-4 justify-between md:flex-row flex-col">
                 <div class="">
-                    <p class="text-sm  text-[#212529]"><span class="text-[#D31145]">Khairil S Iswan </span> - September
+                    <p class="  text-[#212529]"><span class="text-[#D31145]">Khairil S Iswan </span> - September
                         12, 2024 @ 12:28am</p>
-                    <p class="text-[#D31145] text-sm">bhsukan@bh.com.my</p>
+                    <p class="text-[#D31145] ">bhsukan@bh.com.my</p>
                 </div>
                 <div class="flex items-center gap-2 justify-end lg:justify-start">
                     <div
@@ -102,11 +104,11 @@
             </div>
 
             <img src="/Docs/assets/bh-online/img1.png" class="w-full rounded-sm mt-9" alt="">
-            <p class="p-5 text-[#212529] bg-[#f4f4f4] text-center">Menteri Kesihatan, Dato' Seri Dr Dzulkefly Ahmad,
+            <p class="p-5 text-[#212529] bg-[#f4f4f4] text-center text-[1.2rem]">Menteri Kesihatan, Dato' Seri Dr Dzulkefly Ahmad,
                 melawat KK Sungai Besi untuk melihat langsung uji coba sistem Automasi Temujanji dan Pengurusan Dinamik
                 Chup Online.</p>
 
-            <p class="text-[#212529] mt-8">Masalah masa menunggu yang panjang di klinik kesihatan awam sering menjadi
+            <p class="text-[#212529] mt-8 text-[1.2rem]">Masalah masa menunggu yang panjang di klinik kesihatan awam sering menjadi
                 keluhan masyarakat, tular di
                 media sosial, dan menjadi isu yang membelenggu sistem kesihatan negara. Di tengah-tengah perbincangan
                 ini, satu teknologi baharu yang dikenali sebagai Chup Online sedang diuji di beberapa klinik kerajaan,
@@ -120,22 +122,22 @@
 
             <div class="flex gap-3 items-center mt-6 md:pl-6 pl-3">
                 <div class="w-1 h-7 bg-[#D31145]"></div>
-                <h2 class="text-[#212529] font-semibold text-lg">Disyorkan Untuk Anda</h2>
+                <h2 class="text-[#212529] font-semibold text-[1.2rem]">Disyorkan Untuk Anda</h2>
             </div>
 
-            <ul class="text-[#3C3C3C] flex flex-col gap-1 font-medium list-disc mt-5 md:pl-16 pl-10">
+            <ul class="text-[#3C3C3C] flex flex-col gap-1 font-medium list-disc mt-5 md:pl-16 pl-10 text-[1.2rem]">
                 <li>PAS yakin Pahang mampu ditawan pada PRU-16 - Tuan Ibrahim</li>
                 <li> PAS sedia beri autonomi kepada Sabah dan Sarawak</li>
                 <li> Isu rakyat Palestin, SG4 dijangka inti pati utama Muktamar PAS</li>
                 <li> 'Siasat segera kes berkaitan GISBH' - PM</li>
             </ul>
 
-            <p class="text-[#212529] mt-8">Beliau juga memuji kebolehan Chup Online yang membenarkan pesakit menyertai
+            <p class="text-[#212529] mt-8 text-[1.2rem]">Beliau juga memuji kebolehan Chup Online yang membenarkan pesakit menyertai
                 barisan secara jarak jauh melalui peranti mudah alih mereka, membolehkan pesakit menunggu di rumah atau
                 menyelesaikan urusan lain sebelum tiba di klinik tepat pada masanya.</p>
 
-            <h2 class="font-semibold mt-8 pb-1">Pandangan Ketua Setiausaha Kementerian Kesihatan</h2>
-            <p class="text-[#212529] ">Beliau juga memuji kebolehan Chup Online yang membenarkan pesakit menyertai
+            <h2 class="font-semibold mt-8 pb-1 text-[1.2rem]">Pandangan Ketua Setiausaha Kementerian Kesihatan</h2>
+            <p class="text-[#212529] text-[1.2rem] ">Beliau juga memuji kebolehan Chup Online yang membenarkan pesakit menyertai
                 barisan secara jarak jauh melalui peranti mudah alih mereka, membolehkan pesakit menunggu di rumah atau
                 menyelesaikan urusan lain sebelum tiba di klinik tepat pada masanya.
                 <br><br>
@@ -156,8 +158,8 @@
                 mereka.
             </p>
 
-            <h2 class="font-semibold mt-8 pb-1">Maklum Balas Pesakit: Pengalaman yang Lebih Baik</h2>
-            <p class="text-[#212529] ">
+            <h2 class="font-semibold mt-8 pb-1 text-[1.2rem]">Maklum Balas Pesakit: Pengalaman yang Lebih Baik</h2>
+            <p class="text-[#212529] text-[1.2rem] ">
                 Di luar klinik, beberapa pesakit yang ditemui juga memberikan maklum balas positif mengenai sistem Chup
                 Online. Encik Rahman, 52, yang hadir untuk temujanji kesihatan rutin, berkata, “Saya terima mesej pagi
                 tadi yang memberitahu temujanji saya akan sedikit lewat, jadi saya tidak perlu tergesa-gesa datang ke
@@ -175,8 +177,8 @@
                 ke lebih daripada 3,000 klinik dan 150 hospital di seluruh Malaysia,” katanya.
             </p>
 
-            <h2 class="font-semibold mt-8 pb-1">Masa Depan Sistem Kesihatan Malaysia?</h2>
-            <p class="text-[#212529] ">
+            <h2 class="font-semibold mt-8 pb-1 text-[1.2rem]">Masa Depan Sistem Kesihatan Malaysia?</h2>
+            <p class="text-[#212529] text-[1.2rem] ">
                 Sistem Chup Online bukan sahaja mengurangkan masa menunggu pesakit, malah memperbaiki cara klinik
                 beroperasi dengan lebih cekap. Melihat kepada maklum balas positif dari pesakit dan kakitangan klinik,
                 serta keyakinan yang disuarakan oleh Dato' Seri Dr Dzulkefly Ahmad, Dato' Sri Suriani Dato' Ahmad, dan
@@ -188,7 +190,7 @@
             <div class="lg:hidden block">
                 <div class="flex gap-3 items-center mt-6 ">
                     <div class="w-1 h-7 bg-[#D31145]"></div>
-                    <h2 class="text-[#212529] font-semibold text-lg">Berita Berkaitan</h2>
+                    <h2 class="text-[#212529] font-semibold text-[1.2rem]">Berita Berkaitan</h2>
                 </div>
 
 
@@ -340,7 +342,7 @@
 
             <div class="lg:flex gap-3 items-center mt-6  hidden">
                 <div class="w-1 h-7 bg-[#D31145]"></div>
-                <h2 class="text-[#212529] font-semibold text-lg uppercase">Trending</h2>
+                <h2 class="text-[#212529] font-semibold text-[1.2rem] uppercase">Trending</h2>
             </div>
 
             <div class="mt-3 md:block hidden">
@@ -398,7 +400,7 @@
             </div>
             <div class="md:flex gap-3 items-center mt-6 hidden">
                 <div class="w-1 h-7 bg-[#D31145]"></div>
-                <h2 class="text-[#212529] font-semibold text-lg uppercase">MyResipi</h2>
+                <h2 class="text-[#212529] font-semibold text-[1.2rem] uppercase">MyResipi</h2>
             </div>
 
             <div class="mt-3 md:block hidden">
@@ -454,7 +456,7 @@
             </div>
             <div class="md:flex gap-3 items-center mt-6 hidden">
                 <div class="w-1 h-7 bg-[#D31145]"></div>
-                <h2 class="text-[#212529] font-semibold text-lg uppercase ">Seismik</h2>
+                <h2 class="text-[#212529] font-semibold text-[1.2rem] uppercase ">Seismik</h2>
             </div>
 
             <div class="mt-3 md:block hidden">
@@ -512,7 +514,7 @@
             </div>
             <div class="md:flex gap-3 items-center mt-6 hidden ">
                 <div class="w-1 h-7 bg-[#D31145]"></div>
-                <h2 class="text-[#212529] font-semibold text-lg uppercase">MyResipi</h2>
+                <h2 class="text-[#212529] font-semibold text-[1.2rem] uppercase">MyResipi</h2>
             </div>
 
             <div class="mt-3 md:block hidden">
@@ -569,12 +571,12 @@
         </div>
     </div>
 
-    <div class="mt-10 p-5 bg-[#444443] py-12">
+    <div class="mt-10 p-5 text-lg bg-[#444443] py-12">
         <div
             class="flex items-start justify-between md:flex-row flex-col max-w-7xl lg:flex-nowrap flex-wrap mx-auto gap-3">
             <div class="w-full md:w-auto">
                 <img src="/Docs/assets/bh-online/logo-bho.png.png" class="h-16 md:mx-0 mx-auto " alt="">
-                <p class="text-white text-sm mt-4 md:text-start text-center ">Ikuti Kami Di:</p>
+                <p class="text-white mt-4 md:text-start text-center ">Ikuti Kami Di:</p>
                 <div class="grid md:grid-cols-3 grid-cols-6 items-center gap-1.5 mt-1.5">
                     <div class="w-8 h-8 bg-[#314a7e] text-white rounded-full flex items-center justify-center">
                         <i class="fa-brands fa-facebook-f"></i>
@@ -666,11 +668,27 @@
     </div>
 
     <div
-        class="flex items-center md:flex-row flex-col gap-5 md:gap-1 justify-between text-white text-sm p-3 px-5 bg-[#d31145]">
+        class="flex items-center md:flex-row flex-col gap-5 md:gap-1 justify-between text-white p-3 px-5 bg-[#d31145]">
         <p>2024 © BH, New Straits Times Press (M) Bhd (Co. No. 196101000449 / 4485 H). A part of Media Prima Group</p>
         <p>Redaksi | Disclaimer | Notis Perlindungan Data Peribadi</p>
     </div>
 
 </body>
+<script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+<script>
+    const lenis = new Lenis()
+
+    lenis.on('scroll', (e) => {
+        console.log(e)
+    })
+
+    function raf(time) {
+        lenis.raf(time)
+        requestAnimationFrame(raf)
+    }
+
+    requestAnimationFrame(raf)
+</script>
+
 
 </html>
